Set kubernetes_version for helm chart explicitely
With helm v3.11 which is used by the latest commodore version, the
default kubernetes version is now `1.26`. This causes issues with this
chart, as it only supports K8s up to 1.25. Setting the kube_version to
the actual version of the cluster will solve the isue.

Signed-off-by: Nicolas Bigler <nicolas.bigler@vshn.ch>

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -6,6 +6,7 @@ parameters:
       stackgres-operator:
         source: "https://stackgres.io/downloads/stackgres-k8s/stackgres/helm/"
         version: "1.4.0"
+    kubernetesVersion: "${dynamic_facts:kubernetesVersion:major}.${dynamic_facts:kubernetesVersion:minor}"
     helmValues:
       deploy:
         restapi: false
