Allow setting custom registry for the operator image
The registry of the operator image can't be overriden, as it is
hardcoded in the helm chart. Using postprocessing we override the
compiled image.

Signed-off-by: Nicolas Bigler <nicolas.bigler@vshn.ch>

--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/operator-deployment.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/operator-deployment.yaml
@@ -46,7 +46,7 @@ spec:
               value: IfNotPresent
             - name: EXTENSIONS_REPOSITORY_URLS
               value: https://extensions.stackgres.io/postgres/repository
-          image: stackgres/operator:1.4.0
+          image: docker.io/stackgres/operator:1.4.0
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
