--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -14,4 +14,8 @@ parameters:
       kubectl:
         repository: docker.io
         image: ongres/kubectl
-        tag: v1.24.3-build-6.16
+        tag: ""
+      stackgres_operator:
+        repository: docker.io
+        image: stackgres/operator
+        tag: ""
