Allow setting custom registry for the stackgres jobs image
The registry of the stackgres jobs image can't be overriden, as it is
hardcoded in the helm chart. Using postprocessing we override the
compiled image.

Signed-off-by: Nicolas Bigler <nicolas.bigler@vshn.ch>

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -19,3 +19,7 @@ parameters:
         repository: docker.io
         image: stackgres/operator
         tag: ""
+      stackgres_jobs:
+        repository: docker.io
+        image: stackgres/jobs
+        tag: ""
