--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/create-certificate-job.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/create-certificate-job.yaml
@@ -23,60 +23,17 @@ spec:
         - command:
             - /bin/bash
             - -ecx
-            - "kubectl delete csr --ignore-not-found 'stackgres-operator'\ncat <<\
-              \ EOF > /tmp/csr.conf\n[req]\nreq_extensions = v3_req\ndistinguished_name\
-              \ = req_distinguished_name\n[req_distinguished_name]\n[ v3_req ]\nbasicConstraints\
-              \ = CA:FALSE\nkeyUsage = nonRepudiation, digitalSignature, keyEncipherment\n\
-              extendedKeyUsage = serverAuth\nsubjectAltName = @alt_names\n[alt_names]\n\
-              DNS.1 = stackgres-operator\nDNS.2 = stackgres-operator.syn-stackgres-operator\n\
-              DNS.3 = stackgres-operator.syn-stackgres-operator.svc\nDNS.4 = stackgres-operator.syn-stackgres-operator.svc.cluster.local\n\
-              EOF\n\nK8S_VERSION=\"$(kubectl get node --template '{{ (index .items\
-              \ 0).status.nodeInfo.kubeletVersion }}')\"\nIS_EKS=\"$(printf %s \"\
-              $K8S_VERSION\" | grep -q -eks- && echo true || echo false)\"\nK8S_VERSION=\"\
-              ${K8S_VERSION#v}\"\nK8S_VERSION=\"${K8S_VERSION%-*}\"\n\nif [ \"$(echo\
-              \ \"$K8S_VERSION\" | tr . '\\n' \\\n    | while read NUMBER; do printf\
-              \ '%05d' \"$NUMBER\"; done)\" \\\n  -ge \"$(echo \"1.22.0\" | tr . '\\\
-              n' \\\n    | while read NUMBER; do printf '%05d' \"$NUMBER\"; done)\"\
-              \ ]\nthen\n  openssl req -new -nodes -text -keyout /tmp/root.key \\\n\
-              \      -subj \"/CN=system:node:stackgres-operator.syn-stackgres-operator;/O=system:nodes\"\
-              \ \\\n      -out /tmp/server.csr \\\n      -config /tmp/csr.conf\nelse\n\
-              \  openssl req -new -nodes -text -keyout /tmp/root.key \\\n      -subj\
-              \ \"/CN=stackgres-operator.syn-stackgres-operator\" \\\n      -out /tmp/server.csr\
-              \ \\\n      -config /tmp/csr.conf\nfi\nopenssl rsa -in /tmp/root.key\
-              \ -pubout -out /tmp/root.pem\n\ncat << EOF | kubectl create -f -\n$(\n\
-              if [ \"$(echo \"$K8S_VERSION\" | tr . '\\n' \\\n    | while read NUMBER;\
-              \ do printf '%05d' \"$NUMBER\"; done)\" \\\n  -ge \"$(echo \"1.22.0\"\
-              \ | tr . '\\n' \\\n    | while read NUMBER; do printf '%05d' \"$NUMBER\"\
-              ; done)\" ]\nthen\n  echo \"apiVersion: certificates.k8s.io/v1\"\nelse\n\
-              \  echo \"apiVersion: certificates.k8s.io/v1beta1\"\nfi\n)\nkind: CertificateSigningRequest\n\
-              metadata:\n  name: stackgres-operator\nspec:\n  request: \"$(cat /tmp/server.csr\
-              \ | base64 | tr -d '\\n')\"\n  usages:\n  - digital signature\n  - key\
-              \ encipherment\n  - server auth\n$(\nif [ \"$(echo \"$K8S_VERSION\"\
-              \ | tr . '\\n' \\\n    | while read NUMBER; do printf '%05d' \"$NUMBER\"\
-              ; done)\" \\\n  -ge \"$(echo \"1.22.0\" | tr . '\\n' \\\n    | while\
-              \ read NUMBER; do printf '%05d' \"$NUMBER\"; done)\" ]\nthen\n  if \"\
-              $IS_EKS\"\n  then\n    echo \"  signerName: beta.eks.amazonaws.com/app-serving\"\
-              \n  else\n    echo \"  signerName: kubernetes.io/kubelet-serving\"\n\
-              \  fi\nfi\n)\nEOF\n\nif ! kubectl get csr 'stackgres-operator' -o yaml|grep\
-              \ -q '^    type: Approved$'\nthen\n  kubectl certificate approve 'stackgres-operator'\n\
-              \  echo -n \"Waiting for CSR approval...\"\n  until kubectl get csr\
-              \ 'stackgres-operator' -o yaml|grep -q '^    type: Approved$'\n  do\n\
-              \    echo -n .\n    sleep 2\n  done\n  echo \"approved\"\nfi\necho -n\
-              \ \"Waiting for CSR certificate generation...\"\nuntil kubectl get csr\
-              \ 'stackgres-operator' \\\n  --template '{{ if .status }}{{ if .status.certificate\
-              \ }}true{{ end }}{{ end }}' \\\n  | grep -q '^true$'\ndo\n  echo -n\
-              \ .\n  sleep 2\ndone\necho \"certificate generated\"\n\nKEY=\"$(cat\
-              \ /tmp/root.key | base64 | tr -d '\\n')\"\nPUB=\"$(cat /tmp/root.pem\
-              \ | base64 | tr -d '\\n')\"\nCRT=\"$(kubectl get csr 'stackgres-operator'\
-              \ --template '{{ .status.certificate }}' | tr -d '\\n')\"\n\nif [ -z\
-              \ \"$CRT\" ]\nthen\n  echo \"Certificate not found in CSR!\"\n  exit\
-              \ 1\nfi\ncat << EOF > /tmp/certificate-secret.yaml            \napiVersion:\
-              \ v1\nkind: Secret\nmetadata:\n  name: stackgres-operator-certs\n  namespace:\
-              \ syn-stackgres-operator\n  annotations:\n    meta.helm.sh/release-name:\
-              \ stackgres-operator\n    meta.helm.sh/release-namespace: syn-stackgres-operator\n\
-              \  labels:\n    app.kubernetes.io/managed-by: Helm\ntype: kubernetes.io/tls\n\
-              data:\n  tls.key: ${KEY}\n  tls.crt: ${CRT}\nEOF\ncat << EOF > /tmp/validating-webhook-configuration.yaml\
-              \            \napiVersion: admissionregistration.k8s.io/v1\nkind: ValidatingWebhookConfiguration\n\
+            - "echo -n \"Waiting for secret stackgres-operator-certs to be available...\"\
+              \nuntil kubectl get secret -n 'syn-stackgres-operator' 'stackgres-operator-certs'\
+              \ \\\n  --template '{{ if .data }}{{ if and (index .data \"tls.key\"\
+              ) (index .data \"tls.crt\") }}true{{ end }}{{ end }}' \\\n  | grep -q\
+              \ '^true$'\ndo\n  echo -n .\n  sleep 2\ndone\necho \"secret available\"\
+              \nKEY=\"$(kubectl get secret -n 'syn-stackgres-operator' 'stackgres-operator-certs'\
+              \ --template '{{ (index .data \"tls.key\") }}' | tr -d '\\n')\"\nCRT=\"\
+              $(kubectl get secret -n 'syn-stackgres-operator' 'stackgres-operator-certs'\
+              \ --template '{{ (index .data \"tls.crt\") }}' | tr -d '\\n')\"\ncat\
+              \ << EOF > /tmp/validating-webhook-configuration.yaml            \n\
+              apiVersion: admissionregistration.k8s.io/v1\nkind: ValidatingWebhookConfiguration\n\
               metadata:\n  name: stackgres-operator\n  namespace: syn-stackgres-operator\n\
               \  annotations:\n    meta.helm.sh/release-name: stackgres-operator\n\
               \    meta.helm.sh/release-namespace: syn-stackgres-operator\n  labels:\n\
@@ -225,15 +182,14 @@ spec:
               \      service:\n        namespace: syn-stackgres-operator\n       \
               \ name: stackgres-operator\n        path: '/stackgres/mutation/sgscript'\n\
               \      caBundle: ${CRT}\n    admissionReviewVersions: [\"v1\"]\n\nEOF\n\
-              \nkubectl delete -f /tmp/certificate-secret.yaml --ignore-not-found\n\
-              kubectl apply -f /tmp/certificate-secret.yaml\nkubectl apply -f /tmp/validating-webhook-configuration.yaml\n\
-              kubectl apply -f /tmp/mutating-webhook-configuration.yaml\ncat << EOF\
-              \ > /tmp/csr-web.conf\n[req]\nreq_extensions = v3_req\ndistinguished_name\
-              \ = req_distinguished_name\n[req_distinguished_name]\n[ v3_req ]\nbasicConstraints\
-              \ = CA:FALSE\nkeyUsage = nonRepudiation, digitalSignature, keyEncipherment\n\
-              extendedKeyUsage = serverAuth\nsubjectAltName = @alt_names\n[alt_names]\n\
-              DNS.1 = stackgres-restapi\nDNS.2 = stackgres-restapi.syn-stackgres-operator\n\
-              DNS.3 = stackgres-restapi.syn-stackgres-operator.svc\nDNS.4 = stackgres-restapi.syn-stackgres-operator.svc.cluster.local\n\
+              \nkubectl apply -f /tmp/validating-webhook-configuration.yaml\nkubectl\
+              \ apply -f /tmp/mutating-webhook-configuration.yaml\ncat << EOF > /tmp/csr-web.conf\n\
+              [req]\nreq_extensions = v3_req\ndistinguished_name = req_distinguished_name\n\
+              [req_distinguished_name]\n[ v3_req ]\nbasicConstraints = CA:FALSE\n\
+              keyUsage = nonRepudiation, digitalSignature, keyEncipherment\nextendedKeyUsage\
+              \ = serverAuth\nsubjectAltName = @alt_names\n[alt_names]\nDNS.1 = stackgres-restapi\n\
+              DNS.2 = stackgres-restapi.syn-stackgres-operator\nDNS.3 = stackgres-restapi.syn-stackgres-operator.svc\n\
+              DNS.4 = stackgres-restapi.syn-stackgres-operator.svc.cluster.local\n\
               EOF\n\nopenssl req -new -nodes -text -keyout /tmp/web.key \\\n    -subj\
               \ \"/CN=stackgres-restapi.syn-stackgres-operator\" \\\n    -out /tmp/server-web.csr\
               \ \\\n    -config /tmp/csr-web.conf\nopenssl rsa -in /tmp/web.key -pubout\
