Remove reclass hack and document manual change

--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/configure-cert-manager-job.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/configure-cert-manager-job.yaml
@@ -23,27 +23,73 @@ spec:
         - command:
             - /bin/bash
             - -ecx
-            - "cat << EOF | kubectl apply -f -\n---\napiVersion: cert-manager.io/v1\n\
-              kind: Issuer\nmetadata:\n  name: \"stackgres-operator-self-signed-issuer\"\
-              \n  namespace: \"syn-stackgres-operator\"\nspec:\n  selfSigned: {}\n\
-              ---\napiVersion: cert-manager.io/v1\nkind: Certificate\nmetadata:\n\
-              \  name: \"stackgres-operator-ca\"\n  namespace: \"syn-stackgres-operator\"\
-              \nspec:\n  isCA: true\n  commonName: \"stackgres-operator-ca\"\n  secretName:\
-              \ \"stackgres-operator-ca\"\n  privateKey:\n    algorithm: ECDSA\n \
-              \   size: 256\n  issuerRef:\n    name: \"stackgres-operator-self-signed-issuer\"\
-              \n    kind: Issuer\n    group: cert-manager.io\n---\napiVersion: cert-manager.io/v1\n\
-              kind: Issuer\nmetadata:\n  name: \"stackgres-operator-ca-issuer\"\n\
-              \  namespace: \"syn-stackgres-operator\"\nspec:\n  ca:\n    secretName:\
-              \ \"stackgres-operator-ca\"\n---\napiVersion: cert-manager.io/v1\nkind:\
-              \ Certificate\nmetadata:\n  name: \"stackgres-operator-cert\"\n  namespace:\
-              \ \"syn-stackgres-operator\"\nspec:\n  secretName: \"stackgres-operator-managed-certs\"\
-              \n  duration: \"2160h\"\n  renewBefore: \"360h\"\n  subject:\n    organizations:\n\
-              \      - OnGres\n  isCA: false\n  privateKey:\n    algorithm: RSA\n\
-              \    encoding: \"PKCS1\"\n    size: 2048\n  usages:\n    - server auth\n\
-              \    - client auth\n  dnsNames:\n    - stackgres-operator\n    - stackgres-operator.syn-stackgres-operator\n\
-              \    - stackgres-operator.syn-stackgres-operator.svc\n    - stackgres-operator.syn-stackgres-operator.svc.cluster.local\n\
-              \  issuerRef:\n    name: \"stackgres-operator-ca-issuer\"\n    kind:\
-              \ Issuer\n    group: cert-manager.io\nEOF\n"
+            - |
+              cat << EOF | kubectl apply -f -
+              ---
+              apiVersion: cert-manager.io/v1
+              kind: Issuer
+              metadata:
+                name: "stackgres-operator-self-signed-issuer"
+                namespace: "syn-stackgres-operator"
+              spec:
+                selfSigned: {}
+              ---
+              apiVersion: cert-manager.io/v1
+              kind: Certificate
+              metadata:
+                name: "stackgres-operator-ca"
+                namespace: "syn-stackgres-operator"
+              spec:
+                isCA: true
+                commonName: "stackgres-operator-ca"
+                secretName: "stackgres-operator-ca"
+                privateKey:
+                  algorithm: ECDSA
+                  size: 256
+                issuerRef:
+                  name: "stackgres-operator-self-signed-issuer"
+                  kind: Issuer
+                  group: cert-manager.io
+              ---
+              apiVersion: cert-manager.io/v1
+              kind: Issuer
+              metadata:
+                name: "stackgres-operator-ca-issuer"
+                namespace: "syn-stackgres-operator"
+              spec:
+                ca:
+                  secretName: "stackgres-operator-ca"
+              ---
+              apiVersion: cert-manager.io/v1
+              kind: Certificate
+              metadata:
+                name: "stackgres-operator-cert"
+                namespace: "syn-stackgres-operator"
+              spec:
+                secretName: "stackgres-operator-certs"
+                duration: "2160h"
+                renewBefore: "360h"
+                subject:
+                  organizations:
+                    - OnGres
+                isCA: false
+                privateKey:
+                  algorithm: RSA
+                  encoding: "PKCS1"
+                  size: 2048
+                usages:
+                  - server auth
+                  - client auth
+                dnsNames:
+                  - stackgres-operator
+                  - stackgres-operator.syn-stackgres-operator
+                  - stackgres-operator.syn-stackgres-operator.svc
+                  - stackgres-operator.syn-stackgres-operator.svc.cluster.local
+                issuerRef:
+                  name: "stackgres-operator-ca-issuer"
+                  kind: Issuer
+                  group: cert-manager.io
+              EOF
           image: ongres/kubectl:v1.24.3-build-6.16
           imagePullPolicy: IfNotPresent
           name: configure-cert-manager
