Fix webhook CA when using certmanager
The cert manager implementation of the upstream helm chart has a bug that
it won't update the CA in the webhook configuration once the CA is
reissued, which it will be by default.

This PR adds the `inject-ca-from` annotation which will make sure that
the cert manager will update the CA of the certificate once it is
updated.

--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/create-certificate-job.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/create-certificate-job.yaml
@@ -204,7 +204,11 @@ spec:
               \  labels:\n    app.kubernetes.io/managed-by: Helm\ntype: kubernetes.io/tls\n\
               data:\n  tls.key: ${WEB_KEY}\n  tls.crt: ${WEB_CRT}\n  jwt-rsa.key:\
               \ ${WEB_KEY}\n  jwt-rsa.pub: ${WEB_PUB}\nEOF\n\nkubectl delete -f /tmp/web-certificate-secret.yaml\
-              \ --ignore-not-found\nkubectl apply -f /tmp/web-certificate-secret.yaml\n"
+              \ --ignore-not-found\nkubectl apply -f /tmp/web-certificate-secret.yaml\n\
+              kubectl annotate --overwrite validatingwebhookconfigurations stackgres-operator\
+              \ cert-manager.io/inject-ca-from=syn-stackgres-operator/stackgres-operator-cert\n\
+              kubectl annotate --overwrite mutatingwebhookconfigurations stackgres-operator\
+              \ cert-manager.io/inject-ca-from=syn-stackgres-operator/stackgres-operator-cert\n"
           image: docker.io/ongres/kubectl:v1.24.3-build-6.16
           imagePullPolicy: IfNotPresent
           name: create-certificate
