--- a/class/stackgres-operator.yml
+++ b/class/stackgres-operator.yml
@@ -31,3 +31,6 @@ parameters:
         - type: jsonnet
           filter: postprocess/update_images.jsonnet
           path: ${_instance}/01_helmchart/stackgres-operator/templates
+        - type: jsonnet
+          filter: postprocess/fix_certmanager_ca.jsonnet
+          path: ${_instance}/01_helmchart/stackgres-operator/templates
