--- a/class/stackgres-operator.yml
+++ b/class/stackgres-operator.yml
@@ -34,3 +34,9 @@ parameters:
         - type: jsonnet
           filter: postprocess/fix_certmanager_ca.jsonnet
           path: ${_instance}/01_helmchart/stackgres-operator/templates
+        - type: jsonnet
+          filter: postprocess/remove_generated_secets.jsonnet
+          path: ${_instance}/01_helmchart/stackgres-operator/templates
+        - type: jsonnet
+          filter: postprocess/fix_images.jsonnet
+          path: ${_instance}
