Add option to define namespace labels and annotations
This gives us some flexibilty and can be helpful in multiple situations.
The main usecase currently is that we can schedule stackgres on infra
nodes on OpenShift using the annotation `openshift.io/node-selector`

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -3,6 +3,9 @@ parameters:
     =_metadata: {}
 
     namespace: syn-stackgres-operator
+    namespaceLabels: {}
+    namespaceAnnotations: {}
+
     charts:
       stackgres-operator:
         source: "https://stackgres.io/downloads/stackgres-k8s/stackgres/helm/"
