--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/00_namespace.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/00_namespace.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  annotations: {}
+  annotations:
+    openshift.io/node-selector: node-role.kubernetes.io/infra=
   labels:
+    foo: bar
     name: syn-stackgres-operator
   name: syn-stackgres-operator
