Allow all ports but only from instance ns
For some reason on APPUiO Cloud it's not possible to allow specific
ports. So now it allows all ports but only from the instance namespaces.

--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_network_policy.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_network_policy.yaml
@@ -10,10 +10,9 @@ spec:
   egress: []
   ingress:
     - from:
-        - namespaceSelector: {}
-      ports:
-        - port: 8443
-          protocol: TCP
+        - namespaceSelector:
+            matchLabels:
+              appuio.io/billing-name: appcat-postgresql
   podSelector:
     matchLabels:
       app: stackgres-restapi
