Add postprocessing for restapi image
The restapi also needs postprocessing in order to be able to override
the registry for that container

Signed-off-by: Nicolas Bigler <nicolas.bigler@vshn.ch>

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -31,6 +31,10 @@ parameters:
         repository: docker.io
         image: stackgres/operator
         tag: ""
+      stackgres_restapi:
+        repository: docker.io
+        image: stackgres/restapi
+        tag: ""
       stackgres_jobs:
         repository: docker.io
         image: stackgres/jobs
