Add postprocessing for admin-ui image
The admin-ui also needs postprocessing in order to be able to override
the registry for that container

Signed-off-by: Nicolas Bigler <nicolas.bigler@vshn.ch>

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -35,6 +35,9 @@ parameters:
         repository: docker.io
         image: stackgres/restapi
         tag: ""
+      stackgres_adminui:
+        repository: docker.io
+        image: stackgres/admin-ui
       stackgres_jobs:
         repository: docker.io
         image: stackgres/jobs
