--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/webapi-deployment.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/webapi-deployment.yaml
@@ -95,7 +95,7 @@ spec:
               value: localhost:8080
             - name: GRAFANA_TOKEN
               value: unknown
-          image: stackgres/admin-ui:1.4.0
+          image: docker.io/stackgres/admin-ui:1.4.0
           imagePullPolicy: IfNotPresent
           name: stackgres-adminui
           ports:
