Update to latest helm chart version
This will update the component to the latest helm chart.
The latest helm chart contains a few relevant changes:
* The image registry can now be properly set for every image using the
`containerRegistry` parameter in the helm chart. This makes the
post-processing fix obsolete.
* The registry has been changed from `docker.io` to `quay.io` on the
upstream helm chart
* The image to use for setting the RestApi password has been changed
from the `ongres/kubectl` image to the `bitnami/kubectl` image. The
reason is, that we can leverage the `kubernetesVersion` parameter in the
component to fetch the correct `kubectl` container to match the clusters
version.

Signed-off-by: Nicolas Bigler <nicolas.bigler@vshn.ch>

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -9,10 +9,16 @@ parameters:
     charts:
       stackgres-operator:
         source: "https://stackgres.io/downloads/stackgres-k8s/stackgres/helm/"
-        version: "1.4.0"
+        version: "1.5.0"
     kubernetesVersion: "${dynamic_facts:kubernetesVersion:major}.${dynamic_facts:kubernetesVersion:minor}"
 
+    images:
+      registry: quay.io
+      kubectl:
+        registry: docker.io
+
     helmValues:
+      containerRegistry: ${stackgres_operator:images:registry}
       cert:
         certManager:
           autoConfigure: true
@@ -21,24 +27,3 @@ parameters:
           # This makes sure we redeploy stackgres if we change the cert config
           cert-config: >
             ${stackgres_operator:helmValues:cert}
-
-    images:
-      kubectl:
-        repository: docker.io
-        image: ongres/kubectl
-        tag: ""
-      stackgres_operator:
-        repository: docker.io
-        image: stackgres/operator
-        tag: ""
-      stackgres_restapi:
-        repository: docker.io
-        image: stackgres/restapi
-        tag: ""
-      stackgres_adminui:
-        repository: docker.io
-        image: stackgres/admin-ui
-      stackgres_jobs:
-        repository: docker.io
-        image: stackgres/jobs
-        tag: ""
