--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/crd-webhooks-job.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/crd-webhooks-job.yaml
@@ -2,22 +2,20 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   annotations:
-    helm.sh/hook: post-upgrade
+    helm.sh/hook: post-install,post-upgrade
     helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
     helm.sh/hook-weight: '30'
   labels:
-    app: stackgres-operator
+    app: stackgres-operator-init
     job: configure-crd-webhooks
-    scope: init
   name: stackgres-operator-conversion-webhooks
   namespace: syn-stackgres-operator
 spec:
   template:
     metadata:
       labels:
-        app: stackgres-operator
+        app: stackgres-operator-init
         job: configure-crd-webhooks
-        scope: init
     spec:
       containers:
         - env:
@@ -34,7 +32,7 @@ spec:
               value: 'false'
             - name: CONVERSION_WEBHOOKS
               value: 'true'
-          image: docker.io/stackgres/jobs:1.4.0
+          image: quay.io/stackgres/jobs:1.5.0
           imagePullPolicy: IfNotPresent
           name: conversion-webhooks
       restartPolicy: OnFailure
