--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/operator-service-account.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/operator-service-account.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: stackgres-operator
+  namespace: syn-stackgres-operator
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -64,6 +70,7 @@ rules:
       - sgdbops
       - sgobjectstorages
       - sgscripts
+      - sgshardedclusters
     verbs:
       - create
       - watch
@@ -100,3 +107,16 @@ rules:
     verbs:
       - list
       - get
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: stackgres-operator
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: stackgres-operator
+subjects:
+  - kind: ServiceAccount
+    name: stackgres-operator
+    namespace: syn-stackgres-operator
