--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/02_set_restAPI_password_job.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/02_set_restAPI_password_job.yaml
@@ -47,7 +47,7 @@ spec:
               value: syn-stackgres-operator
             - name: USER
               value: admin
-          image: docker.io/ongres/kubectl:v1.24.3-build-6.16
+          image: docker.io/bitnami/kubectl:1.24
           imagePullPolicy: IfNotPresent
           name: set-password
           ports: []
