--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/wait-job.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/wait-job.yaml
@@ -6,30 +6,27 @@ metadata:
     helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
     helm.sh/hook-weight: '100'
   labels:
-    app: stackgres-operator
+    app: stackgres-operator-init
     job: wait
-    scope: cleanup
   name: stackgres-operator-wait
   namespace: syn-stackgres-operator
 spec:
   template:
     metadata:
       labels:
-        app: stackgres-operator
+        app: stackgres-operator-init
         job: wait
-        scope: cleanup
     spec:
       containers:
         - command:
             - /bin/bash
             - -ecx
             - |
-              kubectl set env -n 'syn-stackgres-operator' 'deployment/stackgres-operator' DISABLE_RECONCILIATION-
-              kubectl scale --timeout 1h --replicas 1 -n 'syn-stackgres-operator' 'deployment/stackgres-operator'
-              kubectl scale --timeout 1h --replicas 1 -n 'syn-stackgres-operator' 'deployment/stackgres-restapi'
+              kubectl set env -n 'syn-stackgres-operator' 'deployment/stackgres-operator' DISABLE_RECONCILIATION- RESET_CERTS-
+              kubectl set env -n 'syn-stackgres-operator' 'deployment/stackgres-restapi' RESET_CERTS-
               kubectl rollout status -n 'syn-stackgres-operator' 'deployment/stackgres-operator'
               kubectl rollout status -n 'syn-stackgres-operator' 'deployment/stackgres-restapi'
-          image: docker.io/ongres/kubectl:v1.24.3-build-6.16
+          image: quay.io/ongres/kubectl:v1.25.9-build-6.22
           imagePullPolicy: IfNotPresent
           name: stackgres-operator-wait
       restartPolicy: OnFailure
