--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/webapi-nginx-configmap.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/webapi-nginx-configmap.yaml
@@ -30,26 +30,34 @@ data:
     }
   stackgres-restapi.template: "map $http_host $my_forwarded_port {\n  default $server_port;\n\
     \  \"~^[^\\:]+:(?<p>\\d+)$\" $p;\n}\nserver {\n  set $grafana_embedded '${GRAFANA_EMBEDDED}';\n\
-    \n  server_name  localhost;\n\n  listen       9080;\n  listen       9443 ssl;\n\
-    \  ssl_certificate         /etc/operator/certs/server.crt;\n  ssl_certificate_key\
-    \     /etc/operator/certs/root.key;\n  root   /opt/app-root/src;\n  index index.html;\n\
-    \n  location /admin/ {\n    try_files $uri $uri/index.html /admin/index.html;\n\
-    \  }\n\n  location ~ ^(/|/admin|/admin/)$ {\n    return 302 \"$scheme://$http_host/admin/index.html\"\
-    ;\n  }\n\n  location /grafana {\n    if ($grafana_embedded != true) {\n      return\
-    \ 404;\n    }\n    add_header Content-Type text/plain;\n    return 200 \"$scheme://$http_host${GRAFANA_URL_PATH}\"\
+    \n  server_name  localhost;\n\n  listen       9080;\n  listen       9443 ssl http2;\n\
+    \  ssl_certificate         /etc/operator/certs/tls.crt;\n  ssl_certificate_key\
+    \     /etc/operator/certs/tls.key;\n  ssl_protocols           TLSv1.2 TLSv1.3;\n\
+    \  ssl_ciphers             ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-CHACHA20-POLY1305;\n\
+    \  root   /opt/app-root/src;\n  index index.html;\n\n  location /admin/ {\n  \
+    \  try_files $uri $uri/index.html /admin/index.html;\n  }\n\n  location ~ ^(/|/admin|/admin/)$\
+    \ {\n    return 302 \"$scheme://$http_host/admin/index.html\";\n  }\n\n  location\
+    \ /grafana {\n    if ($grafana_embedded != true) {\n      return 404;\n    }\n\
+    \    add_header Content-Type text/plain;\n    return 200 \"$scheme://$http_host${GRAFANA_URL_PATH}\"\
     ;\n  }\n\n  location ~ ^(/|/stackgres|/stackgres/)$ {\n    return 302 \"$scheme://$http_host/admin/index.html\"\
-    ;\n  }\n\n  location ~ ^/stackgres {\n    proxy_redirect off;\n    proxy_set_header\
+    ;\n  }\n\n  location ~ ^/stackgres {\n    proxy_redirect off;\n    proxy_http_version\
+    \                 1.1;\n    proxy_set_header Host              $host;\n    proxy_set_header\
+    \ X-Real-IP         $remote_addr;\n    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;\n\
+    \    proxy_set_header X-Forwarded-Proto $scheme;\n    proxy_set_header X-Forwarded-Host\
+    \  $host;\n    proxy_set_header X-Forwarded-Port  $my_forwarded_port;\n    proxy_set_header\
+    \ X-Forwarded-Server $host;\n    proxy_buffers                      4 256k;\n\
+    \    proxy_buffer_size                  128k;\n    proxy_busy_buffers_size   \
+    \         256k;\n    \n    proxy_pass http://localhost:8080;\n  }\n\n  location\
+    \ / {\n    if ($grafana_embedded != true) {\n      return 404;\n    }\n    proxy_set_header\
     \ Host $host;\n    proxy_set_header X-Real-IP $remote_addr;\n    proxy_set_header\
-    \ X-Forwarded-Host $host;\n    proxy_set_header X-Forwarded-Port $my_forwarded_port;\n\
-    \    proxy_set_header X-Forwarded-Server $host;\n    proxy_set_header X-Forwarded-For\
-    \ $proxy_add_x_forwarded_for;\n    \n    proxy_pass http://localhost:8080;\n \
-    \ }\n\n  location / {\n    if ($grafana_embedded != true) {\n      return 404;\n\
-    \    }\n    proxy_set_header Host $host;\n    proxy_set_header X-Real-IP $remote_addr;\n\
-    \    proxy_set_header X-Forwarded-Host $host;\n    proxy_set_header X-Forwarded-Server\
-    \ $host;\n    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n \
-    \   index index.html index.htm;\n    proxy_set_header Authorization \"Bearer ${GRAFANA_TOKEN}\"\
-    ;\n    proxy_hide_header X-Frame-Options;\n    proxy_pass \"${GRAFANA_SCHEMA}://${GRAFANA_WEB_HOST}\"\
-    ;\n  }\n}\n"
+    \ X-Forwarded-Host $host;\n    proxy_set_header X-Forwarded-Server $host;\n  \
+    \  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n    index index.html\
+    \ index.htm;\n    proxy_set_header Authorization \"Bearer ${GRAFANA_TOKEN}\";\n\
+    \    proxy_hide_header X-Frame-Options;\n    proxy_pass \"${GRAFANA_SCHEMA}://${GRAFANA_WEB_HOST}\"\
+    ;\n  }\n\n  location = /favicon.ico {\n    log_not_found off;\n  }\n\n  gzip \
+    \           on;\n  gzip_vary       on;\n  gzip_proxied    any;\n  gzip_comp_level\
+    \ 6;\n  gzip_types      text/plain text/css text/xml application/json application/javascript\
+    \ application/rss+xml application/atom+xml image/svg+xml;\n}\n"
 kind: ConfigMap
 metadata:
   annotations:
