Remove RESET_CERTS env variable as it won't work with our setup
Using commodore and argocd doesn't work with the intended behavior of
the helm chart. therefore we remove those fields

Signed-off-by: Nicolas Bigler <nicolas.bigler@vshn.ch>

--- a/class/stackgres-operator.yml
+++ b/class/stackgres-operator.yml
@@ -37,3 +37,6 @@ parameters:
         - type: jsonnet
           filter: postprocess/remove_disable_reconcile_env.jsonnet
           path: ${_instance}/01_helmchart/stackgres-operator/templates
+        - type: jsonnet
+          filter: postprocess/remove_reset_cert_env.jsonnet
+          path: ${_instance}/01_helmchart/stackgres-operator/templates
